--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@
 # misc
 .DS_Store
 *.pem
+.prettierignore
+.prettierrc
 
 # debug
 npm-debug.log*
@@ -26,6 +28,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
+.env
 .env*.local
 
 # vercel
