--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@ignite-ui/react": "^2.2.4",
     "@next/font": "13.1.1",
-    "@prisma/client": "^4.9.0",
+    "@prisma/client": "^4.10.1",
     "@tanstack/react-query": "^4.23.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -24,6 +24,7 @@
     "googleapis": "^110.0.0",
     "next": "13.1.1",
     "next-auth": "^4.18.8",
+    "next-seo": "^5.15.0",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
@@ -35,6 +36,6 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
     "@types/cookie": "^0.5.1",
-    "prisma": "^4.9.0"
+    "prisma": "^4.10.1"
   }
 }
